--- a/helpdesk/static/helpdesk/helpdesk-extend.css
+++ b/helpdesk/static/helpdesk/helpdesk-extend.css
@@ -50,3 +50,14 @@ Add your custom styles here
 }
 #helpdesk-body {padding-top: 100px;}
 img.brand {padding-right: 30px;}
+
+span.priority5 {background-color: #8fa6a6
+}
+span.priority4 {background-color: #c1adb2
+}
+span.priority3 {background-color: #9c817f
+}
+span.priority2 {background-color: #fd7035
+}
+span.priority1 {background-color: #f50000
+}
