--- a/helpdesk/templates/helpdesk/dashboard.html
+++ b/helpdesk/templates/helpdesk/dashboard.html
@@ -13,6 +13,8 @@
 {% endif %}
 </div>
 
+
+<div class="col-md-6">
 <table class="table table-hover table-bordered">
 <thead>
 <tr class='row_tablehead'><td colspan='5'>{% trans "Helpdesk Summary" %}</td></tr>
@@ -29,9 +31,30 @@
 {% endfor %}
 </tbody>
 </table>
+</div>
 
-
-
+<div class="col-md-6">
+<table class="table table-hover table-bordered">
+<thead>
+<tr class='row_tablehead'><td colspan='5'><b>{{ user.username }}</b> {% trans "Open Tickets assigned to you (you are working on this ticket)" %}</td></tr>
+<tr class='row_columnheads'><th>#</th><th>{% trans "Pr" %}</th><th>{% trans "Title" %}</th><th>{% trans "Status" %}</th><th>{% trans "Last Update" %}</th></tr>
+</thead>
+<tbody>
+{% for ticket in user_tickets %}
+<tr class='row_{% cycle odd,even %} row_hover'>
+<th><a href='{{ ticket.get_absolute_url }}'>{{ ticket.ticket }}</a></th>
+<td>{{ ticket.get_priority_span }}</td>
+<td><a href='{{ ticket.get_absolute_url }}'>{{ ticket.title }}</a></td>
+<td>{{ ticket.get_status }}</td>
+<td><span title='{{ ticket.modified|date:"r" }}'>{{ ticket.modified|timesince }}</span></td>
+</tr>
+{% endfor %}
+{% if not user_tickets %}
+<tr class='row_odd'><td colspan='6'>{% trans "You have no tickets assigned to you." %}</td></tr>
+{% endif %}
+</tbody>
+</table>
+</div>
 
 {% if helpdesk_settings.HELPDESK_DASHBOARD_BASIC_TICKET_STATS %}
 <br style='clear: both;' />
@@ -57,63 +80,19 @@
 {% endif %}
 
 
-{% if all_tickets_reported_by_current_user %}
-<table class="table table-hover table-bordered">
-<thead>
-<tr class='row_tablehead'><td colspan='6'>{% trans "All Tickets submitted by you" %}</td></tr>
-<tr class='row_columnheads'><th>#</th><th>{% trans "Pr" %}</th><th>{% trans "Title" %}</th><th>{% trans "Queue" %}</th><th>{% trans "Status" %}</th><th>{% trans "Last Update" %}</th></tr>
-</thead>
-<tbody>
-{% for ticket in all_tickets_reported_by_current_user %}
-<tr class='row_{% cycle odd,even %} row_hover'>
-<th><a href='{{ ticket.get_absolute_url }}'>{{ ticket.ticket }}</a></th>
-<td>{{ ticket.get_priority_span }}</td>
-<th><a href='{{ ticket.get_absolute_url }}'>{{ ticket.title }}</a></th>
-<td>{{ ticket.queue }}</td>
-<td>{{ ticket.get_status }}</td>
-<td><span title='{{ ticket.modified|date:"r" }}'>{{ ticket.modified|timesince }}</span></td>
-</tr>
-{% endfor %}
-</tbody>
-</table>
-{% endif %}
 
 <table class="table table-hover table-bordered">
 <thead>
-<tr class='row_tablehead'><td colspan='6'>{% trans "Open Tickets assigned to you (you are working on this ticket)" %}</td></tr>
-<tr class='row_columnheads'><th>#</th><th>{% trans "Pr" %}</th><th>{% trans "Title" %}</th><th>{% trans "Queue" %}</th><th>{% trans "Status" %}</th><th>{% trans "Last Update" %}</th></tr>
-</thead>
-<tbody>
-{% for ticket in user_tickets %}
-<tr class='row_{% cycle odd,even %} row_hover'>
-<th><a href='{{ ticket.get_absolute_url }}'>{{ ticket.ticket }}</a></th>
-<td>{{ ticket.get_priority_span }}</td>
-<th><a href='{{ ticket.get_absolute_url }}'>{{ ticket.title }}</a></th>
-<td>{{ ticket.queue }}</td>
-<td>{{ ticket.get_status }}</td>
-<td><span title='{{ ticket.modified|date:"r" }}'>{{ ticket.modified|timesince }}</span></td>
-</tr>
-{% endfor %}
-{% if not user_tickets %}
-<tr class='row_odd'><td colspan='6'>{% trans "You have no tickets assigned to you." %}</td></tr>
-{% endif %}
-</tbody>
-</table>
-
-<table class="table table-hover table-bordered">
-<thead>
-<tr class='row_tablehead'><td colspan='6'>{% trans "Unassigned Tickets" %} {% trans "(pick up a ticket if you start to work on it)" %}</td></tr>
-<tr class='row_columnheads'><th>#</th><th>{% trans "Pr" %}</th><th>{% trans "Title" %}</th><th>{% trans "Queue" %}</th><th>{% trans "Created" %}</th><th>&nbsp;</th></tr>
+<tr class='row_tablehead'><td colspan='4'>{% trans "Unassigned Tickets" %} {% trans "(pick up a ticket if you start to work on it)" %}</td></tr>
+<tr class='row_columnheads'><th>#</th><th>{% trans "Pr" %}</th><th>{% trans "Title" %}</th><th>&nbsp;</th></tr>
 </thead>
 <tbody>
 {% for ticket in unassigned_tickets %}
 <tr class='row_{% cycle odd,even %} row_hover'>
 <th><a href='{{ ticket.get_absolute_url }}'>{{ ticket.ticket }}</a></th>
 <td>{{ ticket.get_priority_span }}</td>
-<th><a href='{{ ticket.get_absolute_url }}'>{{ ticket.title }}</a></th>
-<td>{{ ticket.queue }}</td>
-<td><span title='{{ ticket.created|date:"r" }}'>{{ ticket.created|timesince }} ago</span></td>
-<th><a href='{{ ticket.get_absolute_url }}?take'><span class='button button_take'>{% trans "Take" %}</span></a> {% if helpdesk_settings.HELPDESK_DASHBOARD_SHOW_DELETE_UNASSIGNED %}| <a href='{% url 'helpdesk_delete' ticket.id %}'><span class='button button_delete'>{% trans "Delete" %}</span></a>{% endif %}</th>
+<td><a href='{{ ticket.get_absolute_url }}'>{{ ticket.title }}</a> [{{ ticket.get_status }}]</td>
+<td><a href='{{ ticket.get_absolute_url }}?take'><span class='button button_take'>{% trans "Take" %}</span></a> {% if helpdesk_settings.HELPDESK_DASHBOARD_SHOW_DELETE_UNASSIGNED %}{% endif %}</td>
 </tr>
 {% endfor %}
 {% if not unassigned_tickets %}
@@ -122,12 +101,32 @@
 </tbody>
 </table>
 
+{% if all_tickets_reported_by_current_user %}
+<table class="table table-hover table-bordered">
+<thead>
+<tr class='row_tablehead'><td colspan='4'>{% trans "All Tickets submitted by you" %}</td></tr>
+<tr class='row_columnheads'><th>#</th><th>{% trans "Pr" %}</th><th>{% trans "Title" %}</th><th>{% trans "Assigned To" %}</th></tr>
+</thead>
+<tbody>
+{% for ticket in all_tickets_reported_by_current_user %}
+<tr class='row_{% cycle odd,even %} row_hover'>
+<th><a href='{{ ticket.get_absolute_url }}'>{{ ticket.ticket }}</a></th>
+<td>{{ ticket.get_priority_span }}</td>
+<td><a href='{{ ticket.get_absolute_url }}'>{{ ticket.title }}</a> [{{ ticket.get_status }}]</td>
+<td>{% if ticket.assigned_to %}{{ ticket.assigned_to }}{% endif %} <a href='{{ ticket.get_absolute_url }}?take'><span class='button button_take'>{% trans "Take" %}</span></a> {% if helpdesk_settings.HELPDESK_DASHBOARD_SHOW_DELETE_UNASSIGNED %}| <a href='{% url 'helpdesk_delete' ticket.id %}'><span class='button button_delete'>{% trans "Delete" %}</span></a>{% endif %}
+</td>
+</tr>
+{% endfor %}
+</tbody>
+</table>
+{% endif %}
 
+{% if helpdesk_settings.HELPDESK_DASHBOARD_SHOW_RESOLVED %}
 {% if user_tickets_closed_resolved %}
 <table class="table table-hover table-bordered">
 <thead>
-<tr class='row_tablehead'><td colspan='6'>{% trans "Closed & resolved Tickets you used to work on" %}</td></tr>
-<tr class='row_columnheads'><th>#</th><th>{% trans "Pr" %}</th><th>{% trans "Title" %}</th><th>{% trans "Queue" %}</th><th>{% trans "Status" %}</th><th>{% trans "Last Update" %}</th></tr>
+<tr class='row_tablehead'><td colspan='5'>{% trans "Closed & resolved Tickets you used to work on" %}</td></tr>
+<tr class='row_columnheads'><th>#</th><th>{% trans "Pr" %}</th><th>{% trans "Title" %}</th><th>{% trans "Status" %}</th><th>{% trans "Last Update" %}</th></tr>
 </thead>
 <tbody>
 {% for ticket in user_tickets_closed_resolved %}
@@ -135,13 +134,13 @@
 <th><a href='{{ ticket.get_absolute_url }}'>{{ ticket.ticket }}</a></th>
 <td>{{ ticket.get_priority_span }}</td>
 <th><a href='{{ ticket.get_absolute_url }}'>{{ ticket.title }}</a></th>
-<td>{{ ticket.queue }}</td>
 <td>{{ ticket.get_status }}</td>
 <td><span title='{{ ticket.modified|date:"r" }}'>{{ ticket.modified|timesince }}</span></td>
 </tr>
 {% endfor %}
 </tbody>
 </table>
+{% endif %}
 {% endif %}
 
 {% endblock %}
